# LevelsAI

./: README.md
Model/: Model_Converter.py  Model_Training.py  eq_model.h5  eq_model.keras  model.onnx
WASAPI_Monitor/: CMakeLists.txt  main.cpp  onnx_test.cpp
eq_model/: fingerprint.pb  saved_model.pb
eq_model/variables/: variables.data-00000-of-00001  variables.index
